# rust-csv-case-study

./: Cargo.toml  worldcitiespop.csv
src/: main.rs
