[package]
name = "rust-error-handling-case-study"
version = "0.1.0"
authors = ["Leonardo Vilela Pinheiro <leonardo@vilelapinheiro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "~1.1.3"
serde = { version = "~1.0.116", features = ["derive"] }

[profile.release]
lto = true